Fix display issue in IE8
IE8 decided to not wrap text in the contents sidebar of a page not
broken into tabs until hover. Displaying as block seems to fix the
issue.

--- a/app/assets/stylesheets/frontend/views/_specialist_guides.scss
+++ b/app/assets/stylesheets/frontend/views/_specialist_guides.scss
@@ -116,6 +116,10 @@
       margin-left: 1.1em;
       li {
         padding-bottom: 3px;
+        list-style-type: disc;
+        a {
+          display: block;
+        }
       }
     }
   }
